--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,6 +23,7 @@ r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.AutoExposure.Bias=-1.500000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.AntiAliasing=1
+r.RayTracing.ForceAllRayTracingEffects=0
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/DefaultProject")
