--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/_Game/Maps/Map_MainMenu.Map_MainMenu
 EditorStartupMap=/Game/_Game/Maps/Map_BaseMap.Map_BaseMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
