--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9000F07F4AB64ED583F93CAADA3307C9
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
